--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -338,3 +338,33 @@ table.shadingTable td {
     border-right: 2px solid #eee; 
 
 }
+
+.background-color-steelblue {
+	background-color: steelblue;
+}
+
+.table-fixed {
+	width: 100%;
+	tbody {
+		height: 200px;
+		overflow-y: overlay;
+		width: 100%;
+	}
+	thead,tbody,tr,td,th {
+		display: block;
+	}
+	tbody {
+		td {
+			float: left;
+		}
+	}
+	thead {
+		tr {
+			th {
+				float: left;
+				background-color: #f39c12;
+				border-color: #e67e22;
+			}
+		}
+	}
+}
