update less frequency info

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -340,7 +340,9 @@ table.shadingTable td {
 }
 
 .background-color-steelblue {
-	background-color: steelblue;
+	td{
+		background-color: steelblue;
+	}
 }
 
 .table-fixed {
