--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -82,7 +82,7 @@
     overflow: visible;
     position: relative;
     .vi-histogram-svg {
-        overflow: visible;
+        overflow: hidden;
         //border: 1px solid blue;
         position: absolute;
         top: 0;
