fix name for onZoneCtrlReady

--- a/source/app/components/wi-d3-histogram/wi-d3-histogram.html
+++ b/source/app/components/wi-d3-histogram/wi-d3-histogram.html
@@ -9,7 +9,7 @@
             </wi-zone>
 -->
             <wi-zone name="{{wiD3Histogram.getZoneAreaName();}}" zones="wiD3Histogram.zoneArr" active-zone="wiD3Histogram.histogramModel.properties.activeZone"
-                on-zone-data-ready="wiD3Histogram.onZoneCtrlReady">
+                on-zone-ctrl-ready="wiD3Histogram.onZoneCtrlReady">
             </wi-zone>
         </wi-container>
     </div>
