--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -87,7 +87,15 @@
         position: absolute;
         top: 0;
         left: 0;
-        padding: 10px 5px 20px 50px;
+        padding: 0px 2px 20px 50px;
         //background-color: yellow;
+        .tick {
+            line {
+                stroke: gray;
+                stroke-dasharray: 20, 2;
+                stroke-width: 1;
+                stroke-opacity: 0.3;
+            }
+        }
     }
 }
