--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -229,6 +229,9 @@ form h5:after {
 .float-left {
 	float: left;
 }
+.float-right {
+	float: right;
+}
 .valign-middle {
 	vertical-align: middle;
 }
