--- a/source/less/main.less
+++ b/source/less/main.less
@@ -76,6 +76,9 @@ span, h4, h5, p {
 .lm_header .lm_tab .lm_title{
     font-weight: bold;
 }
+.lm_title span {
+    vertical-align: top;
+}
 
 div.lm_content {
     overflow-y: auto;
