Display equations of regression lines

--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -74,6 +74,11 @@
                 }
             }
         }
+        .vi-crossplot-equations {
+            text {
+                font-size: 10px;
+            }
+        }
     }
 }
 
