--- a/source/app/components/wi-d3-crossplot/wi-d3-crossplot.html
+++ b/source/app/components/wi-d3-crossplot/wi-d3-crossplot.html
@@ -10,8 +10,8 @@
     <h5>Reference: [{{wiD3Crossplot.crossplotModel.properties.intervalDepthTop}} - {{wiD3Crossplot.crossplotModel.properties.intervalDepthBottom}}]</h5>
     <div class='crossplot-container'>
       <div style='padding-left:2em;'>{{wiD3Crossplot.crossplotModel.properties.plotType}}</div>
-      <div wi-right-click='wiD3Crossplot.showContextMenu($event)' id='{{wiD3Crossplot.crossplotAreaId}}' wi-element-ready='wiD3Crossplot.onReady()'
-        class='d3-crossplot-region' style="flex:1"></div>
+      <div wi-right-click='wiD3Crossplot.showContextMenu($event)' id='{{wiD3Crossplot.crossplotAreaId}}' wi-element-ready='wiD3Histogram.onReady()'
+        wi-element-ready='wiD3Crossplot.onReady()' class='d3-crossplot-region' style="flex:1"></div>
       <div style='padding-bottom:0.5em;' class='text-center'>{{wiD3Crossplot.crossplotModel.properties.xLabel}}</div>
     </div>
   </div>
