add wi-user, update login

--- a/source/less/main.less
+++ b/source/less/main.less
@@ -373,3 +373,8 @@ input[type].display-none {
 .text-color-lightgray {
     color: slategray;
 }
+.user-wrapper{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
