--- a/source/app/components/wi-d3-crossplot/wi-d3-crossplot.html
+++ b/source/app/components/wi-d3-crossplot/wi-d3-crossplot.html
@@ -7,7 +7,7 @@
   </div>
   <div class='d3-crossplot-region' style="flex:1;display:flex; flex-direction:column;">
     <h4>Crossplot: {{wiD3Crossplot.crossplotModel.properties.name}}</h4>
-    <h5>Reference: [{{wiD3Crossplot.crossplotModel.properties.intervalDepthTop}} - {{wiD3Crossplot.crossplotModel.properties.intervalDepthBottom}}]</h5>
+    <h5>Reference: [{{wiD3Crossplot.wellProperties.topDepth}} - {{wiD3Crossplot.wellProperties.bottomDepth}}]</h5>
     <div class='crossplot-container'>
       <div style='padding-left:2em;'>{{wiD3Crossplot.crossplotModel.properties.plotType}}</div>
       <div wi-right-click='wiD3Crossplot.showContextMenu($event)' id='{{wiD3Crossplot.crossplotAreaId}}' wi-element-ready='wiD3Histogram.onReady()'
