--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -373,3 +373,18 @@ table.shadingTable td {
 		}
 	}
 }
+.regressionLineTable {
+	input[type="number"]::-webkit-outer-spin-button,
+	input[type="number"]::-webkit-inner-spin-button {
+	    -webkit-appearance: none;
+	    margin: 0;
+	}
+}
+.regressionLineTable tbody tr td {
+	padding: 6px 2px;
+	text-align: center;
+}
+#lineStyleBtn {
+	font-size: 10px;
+	padding: 2px 30px;
+}
