--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -49,6 +49,12 @@
     .vi-crossplot-header-container {
         flex: 0 1 auto;
         text-align: center;
+        .vi-crossplot-header-name {
+            font-size: 20px;
+        }
+        .vi-crossplot-header-reference {
+
+        }
     }
 
     .vi-crossplot-body-container {
