--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -36,6 +36,25 @@
     }
 }
 
+.vi-log-track-container {
+    .vi-track-svg-container {
+        border: 1px solid black;
+    }
+
+    .vi-track-drawing {
+        pointer-events: none;
+
+        >g {
+            pointer-events: all;
+        }
+    }
+    .vi-track-axis {
+        .domain {
+            display: none;
+        }
+    }
+}
+
 .vi-marker-svg-group {
     cursor: row-resize;
 }
