--- a/source/app/components/wi-d3-histogram/wi-d3-histogram.less
+++ b/source/app/components/wi-d3-histogram/wi-d3-histogram.less
@@ -43,6 +43,7 @@ wi-d3-histogram {
     }
     .statistic-pane {
         padding-top:14px;
+        height: 30%;
         max-height:70%; 
         min-height:10%;
         display:flex;
