--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -211,8 +211,8 @@ form h5 {
 form h5:after {
 	background-color: blue;
 }
-.font-size-10px {
-	font-size: 10px;
+.text-on-table {
+	font-size: 11px;
 	.form-control {
 		font-size: 10px;
 	}
@@ -387,4 +387,16 @@ table.shadingTable td {
 #lineStyleBtn {
 	font-size: 10px;
 	padding: 2px 30px;
+}
+.generalTab {
+	font-size: 12px;
+	input[type=text] {
+		font-size: 12px;
+	};
+	select {
+		font-size: 12px;
+	}
+}
+.customFillsTable tbody td {
+	text-align: center;
 }
