--- a/source/less/main.less
+++ b/source/less/main.less
@@ -310,6 +310,9 @@ input[type].display-none {
 .padding-bottom-1em {
     padding-bottom: 1em;
 }
+.padding-tb-2em {
+    padding: 2em 0;
+}
 .padding-2em {
 	padding: 2em;
 }
@@ -343,20 +346,27 @@ input[type].display-none {
 .padding-top-0 {
     padding-top: 0px !important;
 }
-.padding-left-20-percent {
-	padding-left: 20%;
-}
+
 .padding-left-5-percent {
     padding-left: 5%;
 }
+.padding-left-10-percent {
+    padding-left: 10%;
+}
 .padding-left-15-percent {
     padding-left: 15%;
+}
+.padding-left-20-percent {
+    padding-left: 20%;
 }
 .padding-left-5px {
 	padding-left: 5px;
 }
 .padding-left-20px {
     padding-left: 20px;
+}
+.padding-left-4em {
+    padding-left: 4em;
 }
 .padding-left-3em {
     padding-left: 3em;
@@ -366,6 +376,9 @@ input[type].display-none {
 }
 .padding-left-1em {
     padding-left: 1em;
+}
+.padding-left-60px {
+    padding-left: 60px;
 }
 .text-color-steelblue {
     color: steelblue;
