--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -37,6 +37,10 @@
 }
 
 .vi-log-track-container {
+    text {
+        cursor: default;
+    }
+
     .vi-track-svg-container {
         border: 1px solid black;
     }
