add cumulative for histogram, change wi-user

--- a/source/app/components/wi-user/wi-user.html
+++ b/source/app/components/wi-user/wi-user.html
@@ -1,4 +1,6 @@
 <div>
-    <img src="{{wiUser.imgUrl}}" alt="User Image" class="user-img">
-    <span class="user-name">{{wiUser.username}}</span>
+    <div class="user-name">{{wiUser.username}}</div>
+    <div class='user-img-holder'>
+        <img src="{{wiUser.imgUrl}}" alt="User Image" class="user-img">
+    </div>
 </div>
