--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -133,11 +133,16 @@
         }
         .sigma-line {
             stroke: #FF8888;
-            stroke-width: 1px;
+            stroke-width: 2px;
         }
         .gaussian-line {
             fill: none;
             stroke: steelblue;
+            stroke-width: 2px;
+        }
+        .cumulative-line {
+            fill: none;
+            stroke: maroon;
             stroke-width: 2px;
         }
     }
