update cumulative curve for histogram

--- a/source/app/components/wi-d3-histogram/wi-d3-histogram.less
+++ b/source/app/components/wi-d3-histogram/wi-d3-histogram.less
@@ -67,4 +67,8 @@ wi-d3-histogram {
     .wi-small{
         font-size: 85%;
     }
+
+    .hide-grid svg .tick line {
+        display: none;
+    }
 }
