update regression lines

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -388,7 +388,11 @@ table.shadingTable td {
 	font-size: 10px;
 	padding: 2px 30px;
 }
-.generalTab {
+
+.customFillsTable tbody td {
+	text-align: center;
+}
+.dialog-style {
 	font-size: 12px;
 	input[type=text] {
 		font-size: 12px;
@@ -397,6 +401,18 @@ table.shadingTable td {
 		font-size: 12px;
 	}
 }
-.customFillsTable tbody td {
-	text-align: center;
+#lineStyleSvg {
+	padding: 2px;
+	border-radius: 3px;
+	background: #fff;
+}
+.regressionLineTable tbody {
+	select, input {
+		font-size: 12px;
+		padding: 4px;
+	}
+	button {
+		font-size: 12px;
+		padding: 4px 20px;
+	}
 }
