--- a/source/less/main.less
+++ b/source/less/main.less
@@ -337,6 +337,9 @@ input[type].display-none {
 .padding-0 {
 	padding: 0;
 }
+.padding-2px {
+    padding: 2px;
+}
 .padding-left-0 {
     padding-left: 0px;
 }
