--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -397,6 +397,9 @@ table.shadingTable td {
 	input[type=text] {
 		font-size: 12px;
 	};
+	input[type=number] {
+		font-size: 12px;
+	};
 	select {
 		font-size: 12px;
 	}
@@ -415,4 +418,9 @@ table.shadingTable td {
 		font-size: 12px;
 		padding: 4px 20px;
 	}
+}
+.zonesTable tbody tr td {
+	padding: 6px 2px;
+	vertical-align: middle;
+	text-align: center;
 }
