--- a/source/less/main.less
+++ b/source/less/main.less
@@ -273,6 +273,9 @@ input[type].display-none {
 .display-inline-block {
     display: inline-block;
 }
+.display-block {
+    display: block;
+}
 
 .margin-right-0_5em {
     margin-right: 0.5em;
@@ -393,4 +396,13 @@ input[type].display-none {
     position: absolute;
     top: 15px;
     right: 15px;
+}
+
+.width-100-percent {
+    width: 100%;
+}
+
+.text-ellipsis {
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
