Add crossplot user line functions

--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -109,6 +109,13 @@
             }
         }
     }
+
+    .vi-crossplot-footer-container {
+        flex: 0 1 auto;
+        height: 20px;
+        line-height: 20px;
+        background-color: rgba(0, 0, 0, 0.1);
+    }
 }
 
 .vi-histogram-container {
