add fix for wisliding and logtrack scroll

--- a/source/app/components/wi-logplot/wi-logplot.less
+++ b/source/app/components/wi-logplot/wi-logplot.less
@@ -30,6 +30,7 @@ wi-logplot {
             width: 80px;
             min-width:80px;
             display: flex;
+            padding: 4px;
         }
 
         .track-area {
