--- a/source/components/wi-slidingbar/wi-slidingbar.less
+++ b/source/components/wi-slidingbar/wi-slidingbar.less
@@ -3,7 +3,7 @@ wi-slidingbar {
   display: block;
   //background-color: #2b542c;
   background-color: #fff;
-  margin: 4px;
+  //margin: 4px;
   //padding: 4px;
   overflow: hidden;
   width: 100%;
