add remember scroll position

--- a/source/app/components/wi-explorer/template/wi-explorer.html
+++ b/source/app/components/wi-explorer/template/wi-explorer.html
@@ -8,6 +8,7 @@
 <div class="label_treeview">
     <span>Name</span><span>Unit</span>
 </div>
-<div style='padding-left: 10px; background-color:#fff; overflow-y: scroll; height: calc(100% - 94px);'>
+<div style='padding-left: 10px; background-color:#fff; overflow-y: scroll; height: calc(100% - 94px);'
+id="treeContent">
     <wi-treeview contextmenuholder="{{wiExplorer.name}}" name="{{wiExplorer.treeviewName}}" config="wiExplorer.treeConfig" container="wiExplorer"></wi-treeview>
 </div>
