Add more regression line regTypes

--- a/source/app/components/wi-crossplot/wi-crossplot-test.html
+++ b/source/app/components/wi-crossplot/wi-crossplot-test.html
@@ -40,7 +40,7 @@
 <div ng-controller="WiDummy">
     <wi-explorer name="WiExplorer" tree-config="myTreeviewConfig" style="display: none"></wi-explorer>
     <wi-properties name="WiProperties" list-config="myPropertiesConfig" style="display: none"></wi-properties>
-    <div style="width: 1000px; height: 500px; border: 1px solid green; display: flex">
+    <div style="width: 100%; height: 500px; border: 1px solid green; display: flex">
         <wi-crossplot name="myCrossPlot" style="flex: 1"></wi-crossplot>
     </div>
 </div>
