--- a/source/less/sprite_32.less
+++ b/source/less/sprite_32.less
@@ -46,11 +46,11 @@
 .tools-normal-32x32, .track-delete-32x32, .track-duplicate-32x32, .tri-tracks-blank-32x32, .true-vertical-depth-32x32, 
 .unlock1-32x32, .user-define-32x32, .user-formula-32x32, .user-formula-multiline-32x32, .visual-remove-32x32, 
 .water-saturation-32x32, .well-depth-convertion-32x32, .well-32x32, .well-delete-32x32, .well-depth-32x32, 
-.well-header-edit-32x32, .well-header-save-32x32, .well-load-32x32, .well-marker-add-32x32, .well-new-32x32, 
-.well-parameter-save-32x32, .wells-32x32, .workflow-32x32, .zonation-track-add-32x32, .zone-add-plus-32x32, 
-.zone-curve-32x32, .zone-delete-32x32, .zone-edit-32x32, .zone-fluid-32x32, .zone-management-32x32, 
-.zone-mineral-32x32, .zone-properties-32x32, .zone-split-32x32, .zone-table-32x32, .zoom-default-32x32, 
-.zoom-in-32x32, .zoom-out-32x32, .block-value-32x32, .block-value-v-32x32
+.well-header-edit-32x32, .well-header-save-32x32, .well-insight-32x32, .well-load-32x32, .well-marker-add-32x32, 
+.well-new-32x32, .well-parameter-save-32x32, .wells-32x32, .workflow-32x32, .zonation-track-add-32x32, 
+.zone-add-plus-32x32, .zone-curve-32x32, .zone-delete-32x32, .zone-edit-32x32, .zone-fluid-32x32, 
+.zone-management-32x32, .zone-mineral-32x32, .zone-properties-32x32, .zone-split-32x32, .zone-table-32x32, 
+.zoom-default-32x32, .zoom-in-32x32, .zoom-out-32x32, .block-value-32x32, .block-value-v-32x32
 { display: inline-block; background: url('../img/img_32x32.png') no-repeat; overflow: hidden; text-indent: -9999px; text-align: left; }
  
 .neural-network-32x32 { background-position: -0px -0px; width: 32px; height: 32px; }
@@ -285,25 +285,26 @@
 .well-depth-32x32 { background-position: -0px -7328px; width: 32px; height: 32px; }
 .well-header-edit-32x32 { background-position: -0px -7360px; width: 32px; height: 32px; }
 .well-header-save-32x32 { background-position: -0px -7392px; width: 32px; height: 32px; }
-.well-load-32x32 { background-position: -0px -7424px; width: 32px; height: 32px; }
-.well-marker-add-32x32 { background-position: -0px -7456px; width: 32px; height: 32px; }
-.well-new-32x32 { background-position: -0px -7488px; width: 32px; height: 32px; }
-.well-parameter-save-32x32 { background-position: -0px -7520px; width: 32px; height: 32px; }
-.wells-32x32 { background-position: -0px -7552px; width: 32px; height: 32px; }
-.workflow-32x32 { background-position: -0px -7584px; width: 32px; height: 32px; }
-.zonation-track-add-32x32 { background-position: -0px -7616px; width: 32px; height: 32px; }
-.zone-add-plus-32x32 { background-position: -0px -7648px; width: 32px; height: 32px; }
-.zone-curve-32x32 { background-position: -0px -7680px; width: 32px; height: 32px; }
-.zone-delete-32x32 { background-position: -0px -7712px; width: 32px; height: 32px; }
-.zone-edit-32x32 { background-position: -0px -7744px; width: 32px; height: 32px; }
-.zone-fluid-32x32 { background-position: -0px -7776px; width: 32px; height: 32px; }
-.zone-management-32x32 { background-position: -0px -7808px; width: 32px; height: 32px; }
-.zone-mineral-32x32 { background-position: -0px -7840px; width: 32px; height: 32px; }
-.zone-properties-32x32 { background-position: -0px -7872px; width: 32px; height: 32px; }
-.zone-split-32x32 { background-position: -0px -7904px; width: 32px; height: 32px; }
-.zone-table-32x32 { background-position: -0px -7936px; width: 32px; height: 32px; }
-.zoom-default-32x32 { background-position: -0px -7968px; width: 32px; height: 32px; }
-.zoom-in-32x32 { background-position: -0px -8000px; width: 32px; height: 32px; }
-.zoom-out-32x32 { background-position: -0px -8032px; width: 32px; height: 32px; }
-.block-value-32x32 { background-position: -0px -8064px; width: 24px; height: 24px; }
-.block-value-v-32x32 { background-position: -0px -8088px; width: 24px; height: 24px; }
+.well-insight-32x32 { background-position: -0px -7424px; width: 32px; height: 32px; }
+.well-load-32x32 { background-position: -0px -7456px; width: 32px; height: 32px; }
+.well-marker-add-32x32 { background-position: -0px -7488px; width: 32px; height: 32px; }
+.well-new-32x32 { background-position: -0px -7520px; width: 32px; height: 32px; }
+.well-parameter-save-32x32 { background-position: -0px -7552px; width: 32px; height: 32px; }
+.wells-32x32 { background-position: -0px -7584px; width: 32px; height: 32px; }
+.workflow-32x32 { background-position: -0px -7616px; width: 32px; height: 32px; }
+.zonation-track-add-32x32 { background-position: -0px -7648px; width: 32px; height: 32px; }
+.zone-add-plus-32x32 { background-position: -0px -7680px; width: 32px; height: 32px; }
+.zone-curve-32x32 { background-position: -0px -7712px; width: 32px; height: 32px; }
+.zone-delete-32x32 { background-position: -0px -7744px; width: 32px; height: 32px; }
+.zone-edit-32x32 { background-position: -0px -7776px; width: 32px; height: 32px; }
+.zone-fluid-32x32 { background-position: -0px -7808px; width: 32px; height: 32px; }
+.zone-management-32x32 { background-position: -0px -7840px; width: 32px; height: 32px; }
+.zone-mineral-32x32 { background-position: -0px -7872px; width: 32px; height: 32px; }
+.zone-properties-32x32 { background-position: -0px -7904px; width: 32px; height: 32px; }
+.zone-split-32x32 { background-position: -0px -7936px; width: 32px; height: 32px; }
+.zone-table-32x32 { background-position: -0px -7968px; width: 32px; height: 32px; }
+.zoom-default-32x32 { background-position: -0px -8000px; width: 32px; height: 32px; }
+.zoom-in-32x32 { background-position: -0px -8032px; width: 32px; height: 32px; }
+.zoom-out-32x32 { background-position: -0px -8064px; width: 32px; height: 32px; }
+.block-value-32x32 { background-position: -0px -8096px; width: 24px; height: 24px; }
+.block-value-v-32x32 { background-position: -0px -8120px; width: 24px; height: 24px; }
