--- a/source/less/main.less
+++ b/source/less/main.less
@@ -229,7 +229,7 @@ wi-dropdown.fix-btn-sm span{
     text-indent: center;   
 }
 
-input[type].display-none {
+input[type].display-none, .display-none {
     display: none;
 }
 
@@ -400,6 +400,10 @@ input[type].display-none {
 
 .width-100-percent {
     width: 100%;
+}
+
+.height-100-percent {
+    height: 100%;
 }
 
 .text-ellipsis {
