--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -246,9 +246,9 @@ form h5:after {
         margin:0 0 5px 0;
     }
 }
-.ui-select-bootstrap .ui-select-choices-row>span.ui-select-choices-row-inner {
-    display: inline-block;
-}
+// .ui-select-bootstrap .ui-select-choices-row>span.ui-select-choices-row-inner {
+//     display: inline-block;
+// }
 input.color-comp::-webkit-inner-spin-button,
 input.color-comp::-webkit-outer-spin-button{
 	-webkit-appearance: none; 
