--- a/source/app/components/wi-d3-histogram/wi-d3-histogram.html
+++ b/source/app/components/wi-d3-histogram/wi-d3-histogram.html
@@ -1,12 +1,11 @@
 <div style="display:flex; flex-direction:row">
     <div resizable r-directions="['right']" r-flex="true" ng-show="wiD3Histogram.isShowWiZone" style="min-width:10%;max-width:20%">
-        <wi-container name='ZoneHistogramContainer' title='Zone' close-handler='wiD3Histogram.CloseZone'>
-            <wi-zone name="{{wiD3Histogram.getZoneAreaName();}}" zones="wiD3Histogram.zoneArr" active-zone="wiD3Histogram.histogramModel.properties.activeZone"
+        <wi-container title='Zone' close-handler='wiD3Histogram.CloseZone'>
+            <wi-zone name="{{wiD3Histogram.getWiZoneCtrlName()}}" zones="wiD3Histogram.zoneArr" active-zone="wiD3Histogram.histogramModel.properties.activeZone"
                 on-zone-ctrl-ready="wiD3Histogram.onZoneCtrlReady">
             </wi-zone>
         </wi-container>
     </div>
-    
     
     <div style='flex:1; display: flex;flex-direction:column;margin:0px 14px'>
         <div wi-right-click='wiD3Histogram.showContextMenu($event)' style="flex:1;display:flex;flex-direction:column;">
@@ -21,7 +20,7 @@
             </h5>
             <div class='histogram-container'>
                 <div style='padding-left:2em;' ng-show="wiD3Histogram.histogramModel.properties.idCurve">{{wiD3Histogram.histogramModel.properties.plotType}}</div>
-                <div id='{{wiD3Histogram.histogramAreaId}}' wi-element-ready='wiD3Histogram.onReady()' class='d3-histogram-region' style="flex:1"></div>
+                <div id='{{wiD3Histogram.histogramAreaId}}' wi-element-ready='wiD3Histogram.onReady()' class='d3-histogram-region' style="flex:1" ng-dblclick='wiD3Histogram.histogramFormat();'></div>
                 <div style='padding-bottom:0.5em;' class='text-center'>{{wiD3Histogram.histogramModel.properties.xLabel}}</div>
             </div>
         </div>
@@ -99,8 +98,9 @@
         </div>
     </div>
     
-    
     <div resizable r-directions="['left']" r-flex="true" ng-show="wiD3Histogram.isShowReferenceWindow" style="min-width:20%;max-width:30%">
-        <wi-container name='RefHistogramContainer' title='Reference Curve' close-handler='wiD3Histogram.CloseReferenceWindow'></wi-container>
+        <wi-container title='Reference Curve' close-handler='wiD3Histogram.CloseReferenceWindow'>
+            <wi-reference-window name='{{wiD3Histogram.getWiRefWindCtrlName()}}'></wi-reference-window>
+        </wi-container>
     </div>
 </div>
