--- a/source/app/components/wi-logplot/template/wi-logplot.html
+++ b/source/app/components/wi-logplot/template/wi-logplot.html
@@ -1,4 +1,4 @@
-<div class="logplot-toolbar-wrapper">
+<div class="logplot-toolbar-wrapper" ng-class="{'crop-display':wiLogplot.cropDisplay}">
     @@include('./toolbar/index.html')
 </div>
 <div class="logplot-well-name" ng-bind="wiLogplot.wellName"></div>
@@ -12,6 +12,7 @@
     <div class="track-area">
         <wi-d3 style="width: 100%; flex: 1; display: flex;"
                name='{{wiLogplot.wiD3AreaName}}'
-               wi-logplot-ctrl='wiLogplot'></wi-d3>
+               wi-logplot-ctrl='wiLogplot'>
+        </wi-d3>
     </div>
 </div>
