--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -384,13 +384,24 @@ table.shadingTable td {
 	padding: 6px 2px;
 	text-align: center;
 }
+
 #lineStyleBtn {
 	font-size: 10px;
 	padding: 2px 30px;
 }
 
-.customFillsTable tbody td {
-	text-align: center;
+.customFillsTable {
+
+	thead {
+		th {
+			text-align: center;
+		}
+	}
+	tbody { 
+		td {
+			text-align: center;
+		}
+	}
 }
 .dialog-style {
 	font-size: 12px;
