--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -13,6 +13,10 @@
     }
 }
 
+.vi-track-header-name {
+    cursor: move;
+}
+
 .vi-zone-header {
     position: relative;
     padding: 2px 0 2px 0;
@@ -169,4 +173,10 @@
             padding: 0.2em 0.5em;
         }
     }
+}
+.outline {
+    border: 1px dashed gray;
+    width: 5px;
+    z-index: 2;
+    height: 100%;
 }
