--- a/source/app/components/wi-reference-window/wi-reference-window.html
+++ b/source/app/components/wi-reference-window/wi-reference-window.html
@@ -1,1 +1,1 @@
-<div id="{{wiReferenceWindow.name;}}">reference window</div>
+<div id="{{wiReferenceWindow.name;}}" wi-element-ready="wiReferenceWindow.onReady();"></div>
