--- a/source/app/components/wi-crossplot/wi-crossplot-test.html
+++ b/source/app/components/wi-crossplot/wi-crossplot-test.html
@@ -43,6 +43,7 @@
     <div style="width: 100%; height: 500px; border: 1px solid green; display: flex">
         <wi-crossplot name="myCrossPlot" style="flex: 1"></wi-crossplot>
     </div>
+    <button ng-click='onTernaryButtonClick()'>Ternary</button>
 </div>
 </body>
 </html>
