--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -96,7 +96,7 @@ img {
 
 .form-group span{
 	// margin-left: 55px;
-	color: red;
+	// color: red;
 }
 .area {
     border: 1px dashed #4d97e6;
@@ -384,7 +384,14 @@ table.shadingTable td {
 	padding: 6px 2px;
 	text-align: center;
 }
-
+.refCurveTable {
+	thead tr th {
+		text-align: center;		
+	}
+	tbody tr td {
+		text-align: center;
+	}
+}
 #lineStyleBtn {
 	font-size: 10px;
 	padding: 2px 30px;
