Working on ternary dialog

--- a/source/app/components/wi-crossplot/wi-crossplot-test.html
+++ b/source/app/components/wi-crossplot/wi-crossplot-test.html
@@ -1,23 +1,54 @@
 <html>
 <head>
-    <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
+        <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link href="vendor/css/jquery-ui.css" rel="stylesheet">
     <link href="vendor/css/font-awesome.min.css" rel="stylesheet">
     <link href="vendor/css/themify-icons.css" rel="stylesheet">
 
-    <link href='css/main.css' rel='stylesheet'>
-    <link href='css/wi-button.css' rel='stylesheet'>
-    <link href='css/wi-toolbar.css' rel='stylesheet'>
-    <link href='css/wi-slidingbar.css' rel='stylesheet'>
-    <link href='css/wi-context-menu.css' rel='stylesheet'>
-    <link href='css/wi-crossplot.css' rel='stylesheet'>
-    <link href='css/wi-d3-crossplot.css' rel='stylesheet'>
-    <link href='css/wi-context-menu.css' rel='stylesheet'>
-    <link rel="stylesheet" href="css/wi-d3.css">
-    <link rel="stylesheet" href="css/graph.css">
+    <!-- color picker -->
+    <link rel="stylesheet" href="vendor/css/kendo.common-material.min.css"/>
+    <link rel="stylesheet" href="vendor/css/kendo.material.min.css"/>
+    <link rel="stylesheet" href="vendor/css/kendo.material.mobile.min.css"/>
+    <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-colorpicker.min.css">
+    <link rel="stylesheet" type="text/css" href="css/dialogs.css">
+    <link rel="stylesheet" type="text/css" href="css/color-picker.css">
+    <link rel="stylesheet" href="vendor/css/angular-resizable.min.css">
+    <link rel="stylesheet" type="text/css" href="vendor/css/multiple-select.css">
+    <link rel="stylesheet" href="vendor/css/select.css">
 
-    <link rel="stylesheet" href="css/sprite_32.css">
+
     <link rel="stylesheet" href="css/sprite_16.css">
+    <link rel="stylesheet" href="css/sprite_32.css">
+
+    <link rel='stylesheet' href='vendor/css/goldenlayout-base.css'>
+    <link type="text/css" rel="stylesheet" href="vendor/css/goldenlayout-light-theme.css" />
+
+    <link href='css/wi-button.css' rel='stylesheet'>
+    <link href='css/wi-dropdown.css' rel='stylesheet'>
+    <link href='css/wi-toolbar.css' rel='stylesheet'>
+    <link href='css/wi-tab.css' rel='stylesheet'>
+    <link href='css/wi-list.css' rel='stylesheet'>
+    <link href='css/wi-context-menu.css' rel='stylesheet'>
+    <link href='css/wi-treeview.css' rel='stylesheet'>
+    <link href='css/wi-status-bar.css' rel='stylesheet'>
+    <link href='css/wi-slidingbar.css' rel='stylesheet'>
+    <link href='css/wi-resizable-x.css' rel='stylesheet'>
+    <link href='css/wi-reference-window.css' rel='stylesheet'>
+
+    <link href='css/wi-logplot.css' rel='stylesheet'>
+    <link href='css/wi-crossplot.css' rel='stylesheet'>
+    <link href='css/wi-histogram.css' rel='stylesheet'>
+    <link href='css/wi-d3-histogram.css' rel='stylesheet'>
+    <link href='css/wi-d3-crossplot.css' rel='stylesheet'>
+    <link href='css/wi-d3.css' rel='stylesheet'>
+    <link href='css/wi-explorer.css' rel='stylesheet'>
+    <link rel="stylesheet" href="css/wi-zone.css">
+    <link rel="stylesheet" href="css/wi-container.css">
+    <link rel="stylesheet" href="css/wi-user.css">
+    <link rel="stylesheet" href="css/wi-spinner.css">
+
+    <link href='css/graph.css' rel='stylesheet'>
+    <link href='css/main.css' rel='stylesheet'>
 
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
@@ -29,6 +60,7 @@
     <script src="vendor/js/jquery.mousewheel.min.js"></script>
     <script src="vendor/js/ng-file-upload.min.js"></script>
     <script src="vendor/js/kendo.all.min.js"></script>
+    <script src="vendor/js/angularjs-dropdown-multiselect.min.js"></script>
 
     <script src="js/main-crossplot.js.bundle.js"></script>
 
