update user define line dialog/ commit 1000th

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -392,6 +392,14 @@ table.shadingTable td {
 		text-align: center;
 	}
 }
+.udlinesTable {
+	thead tr th {
+		text-align: center;		
+	}
+	tbody tr td {
+		text-align: center;
+	}
+}
 #lineStyleBtn {
 	font-size: 10px;
 	padding: 2px 30px;
