--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -466,3 +466,8 @@ input[type="checkbox"] {
 .color-navy {
     background-color: navy;
 }
+.template {
+	font-size: 11px;
+    font-weight: bold;
+    letter-spacing: -0.5;
+}
