histogram: loga, flipped horizontal, axis for cummulative

--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -126,13 +126,15 @@
     flex: 1;
     overflow: visible;
     position: relative;
+    padding: 0px 50px 20px 50px;
+    //box-sizing: content-box;
     .vi-histogram-svg {
-        overflow: hidden;
+        overflow: visible;
         //border: 1px solid blue;
         position: absolute;
-        top: 0;
-        left: 0;
-        padding: 0px 2px 20px 50px;
+        top: 0px;
+        left: 50px;
+        //padding: 0px 50px 20px 50px;
         //background-color: yellow;
         .tick {
             line {
