--- a/source/app/components/wi-d3-histogram/wi-d3-histogram.html
+++ b/source/app/components/wi-d3-histogram/wi-d3-histogram.html
@@ -23,7 +23,7 @@
                     <div>{{wiD3Histogram.histogramModel.properties.plotType}}</div>
                     <div>Probability (%)</div>
                 </div>
-                <div id='{{wiD3Histogram.histogramAreaId}}' wi-element-ready='wiD3Histogram.onReady()' class='d3-histogram-region' style="flex:1" ng-dblclick='wiD3Histogram.histogramFormat();'></div>
+                <div id='{{wiD3Histogram.histogramAreaId}}' wi-element-ready='wiD3Histogram.onReady()' class='d3-histogram-region' ng-dblclick='wiD3Histogram.histogramFormat();'></div>
                 <div style='padding-bottom:0.5em;' class='text-center'>{{wiD3Histogram.histogramModel.properties.xLabel}}</div>
             </div>
         </div>
