--- a/source/app/components/wi-reference-window/wi-reference-window.html
+++ b/source/app/components/wi-reference-window/wi-reference-window.html
@@ -1,1 +1,3 @@
-<div id="{{wiReferenceWindow.name;}}" wi-element-ready="wiReferenceWindow.onReady();"></div>
+<div id="{{wiReferenceWindow.name}}" wi-element-ready="wiReferenceWindow.onReady();">
+    <div ng-show="wiReferenceWindow.loading" style="background-color:white;position:absolute; top: -2; bottom:-2; left:-2;right:-2;z-index:10" id="{{wiReferenceWindow.name}}-spinner"></div>
+</div>
