--- a/source/app/components/wi-reference-window/wi-reference-window.less
+++ b/source/app/components/wi-reference-window/wi-reference-window.less
@@ -4,5 +4,10 @@ wi-reference-window {
         width: 100%;
         height: 100%;
         background-color: white;
+        padding:0 0 0 35px;
+    }
+    svg.grid-svg {
+        position: absolute;
+        overflow: visible;
     }
 }
