--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -136,14 +136,7 @@
         left: 50px;
         //padding: 0px 50px 20px 50px;
         //background-color: yellow;
-        .tick {
-            line {
-                stroke: gray;
-                stroke-dasharray: 20, 2;
-                stroke-width: 1;
-                stroke-opacity: 0.3;
-            }
-        }
+
         .mean-line {
             stroke: #88FF88;
             stroke-width: 1px;
@@ -181,4 +174,19 @@
     width: 5px;
     z-index: 2;
     height: 100%;
+}
+.tick {
+    line {
+        stroke: rgba(0,118,118,1);
+        stroke-dasharray: 20, 2;
+        stroke-width: 1;
+        stroke-opacity: 0.3;
+    }
+}
+.tick.major { 
+    line {
+        stroke: rgba(0,118,118,1);
+        stroke-dasharray: 0;
+        stroke-opacity: 0.8;
+    }
 }
