--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -471,3 +471,11 @@ input[type="checkbox"] {
     font-weight: bold;
     letter-spacing: -0.5;
 }
+.modalTernary {
+	thead tr th {
+		text-align: center;		
+	}
+	tbody tr td {
+		text-align: center;
+	}
+}
