--- a/source/app/components/wi-reference-window/wi-reference-window.less
+++ b/source/app/components/wi-reference-window/wi-reference-window.less
@@ -1,13 +1,27 @@
 wi-reference-window {
     &>div {
         position:relative;
+        display:flex;
+        flex-direction:column;
         width: 100%;
         height: 100%;
-        background-color: white;
-        padding:0 0 0 35px;
-    }
-    svg.grid-svg {
-        position: absolute;
-        overflow: visible;
+        background-color: none;
+        //padding:0 0 0 35px;
+        &>div.plot {
+            position:relative;
+            background-color: white;
+            flex: 1;
+            padding:0 0 0 35px;
+        }
+        &>div.info {
+            margin-top: 0.3em;
+            padding: 0.2em 0.5em;
+            background-color: white;
+            min-height: 80px;
+        }
+        svg.grid-svg {
+            position: absolute;
+            overflow: visible;
+        }
     }
 }
